fix(versionhistory): change minimum contrast color

--- a/src/elements/content-sidebar/versions/VersionsGroup.scss
+++ b/src/elements/content-sidebar/versions/VersionsGroup.scss
@@ -5,7 +5,7 @@
     margin-bottom: 0;
     padding-top: 20px;
     padding-bottom: 10px;
-    color: $bdl-gray-50;
+    color: $bdl-gray-62;
     font-size: 14px;
     line-height: 1;
 }
